{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 332,
  "lineage": "488959c4-4c94-5935-71ed-7de83420734a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jenkins",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/networkInterfaces/default-jenkins-nic",
            "ip_configuration": [
              {
                "name": "default-jenkins-ip-config",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/publicIPAddresses/default-jenkins-pip",
                "subnet_id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-network/subnets/internal"
              }
            ],
            "location": "uksouth",
            "name": "default-jenkins-nic",
            "network_security_group_id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/default-jenkins-nsg",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "default"
          },
          "depends_on": [
            "azurerm_network_security_group.jenkins",
            "azurerm_public_ip.jenkins",
            "azurerm_resource_group.default",
            "azurerm_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nginx",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/networkInterfaces/default-nginx-nic",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/publicIPAddresses/nginx-pip",
                "subnet_id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-network/subnets/internal"
              }
            ],
            "location": "uksouth",
            "name": "default-nginx-nic",
            "network_security_group_id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/nginx-nsg",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "default"
          },
          "depends_on": [
            "azurerm_network_security_group.nginx",
            "azurerm_public_ip.nginx",
            "azurerm_resource_group.default",
            "azurerm_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jenkins",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/default-jenkins-nsg",
            "location": "uksouth",
            "name": "default-jenkins-nsg",
            "resource_group_name": "default",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nginx",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/nginx-nsg",
            "location": "uksouth",
            "name": "nginx-nsg",
            "resource_group_name": "default",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jenkins",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "jenkins-251119081650",
            "fqdn": "jenkins-251119081650.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/publicIPAddresses/default-jenkins-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "default-jenkins-pip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "default",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nginx",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "nginx-251119081650",
            "fqdn": "nginx-251119081650.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/publicIPAddresses/nginx-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "nginx-pip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "default",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "default",
            "virtual_network_name": "default-network"
          },
          "depends_on": [
            "azurerm_resource_group.default",
            "azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "default",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/02e89954-614d-432d-9abc-71f710cd428e/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-network",
            "location": "uksouth",
            "name": "default-network",
            "resource_group_name": "default"
          },
          "depends_on": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    }
  ]
}